<resources>
    <string name="app_name">Github User</string>
    <string name="list_user">List User</string>
    <string name="my_profile">My Profile</string>
    <string name="search">Search</string>
    <string name="tab_text_1">Following</string>
    <string name="tab_text_2">Follower</string>
    <string name="bahasa">Language Setting</string>
    <string name="search_hint">Search Username</string>
    <string name="repository">Repository</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="reminder">Reminder</string>
    <string name="favorite">User Favorit</string>
    <string name="alarm_message">Alarm Message</string>
    <string name="repeating_alarm">Repeating Alarm</string>
    <string name="set_repeating_alarm">Set Repeating Alarm</string>
    <string name="cancel_alarm">Cancel Alarm</string>
    <string name="alarm_time">Alarm Time</string>
    <string name="alarm_date">Alarm Date</string>

</resources>